# algorithms

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  main.cpp
searching/: CMakeLists.txt  binary_search.h  linear_search.h
searching/test/: binary_search_test.cpp  linear_search_test.cpp
sorting/: CMakeLists.txt  bubble_sort.h  insert_sort.h
sorting/test/: bubble_sort_test.cpp  insert_sort_test.cpp
